Cambiando la direccion de las imagenes a ver si asi se muestran en el github page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 <body>
 	<header>
-		<img src="imagenes/Logo-1.PNG" alt="Logo">
+		<img src="https://i.postimg.cc/XYMYBcdR/Logo-1.png" alt="Logo">
 		<h1>Encriptador y desencriptador de texto</h1>
 	</header>
 	<main>
@@ -31,7 +31,7 @@
 		<section class="section2">
 
 			<div id="contenedor-munheco">
-				<img src="imagenes/Muñeco1.PNG" alt="imagen muñeco">
+				<img src="https://i.postimg.cc/L8z6tYVn/Mu-eco1.png" alt="imagen muñeco">
 			</div>
 
 			<div id="contenedor-mensajederecha">
